--- a/Changes
+++ b/Changes
@@ -1,39 +1,33 @@
-Revision history for Perl extension Time::Progress.
+Revision history for Perl module Time::Progress
 
-1.8   Mon Jul  8 2013
+1.9 2015-08-??
+  - Reformatted this file as per CPAN::Changes::Spec
 
+1.8 2013-07-08 CADE
   - more spelling
   - published to github
   - fixed docs
 
-1.7   Fri Sep 10 2010
-
+1.7 2010-09-10 CADE
   - fixed spelling (note by Salvatore Bonaccorso)
 
-1.6   Wed Sep  8 2010
-
+1.6 2010-09-08 CADE
   - fixed helpers (note by Andreas Koenig)
 
-1.5   Wed Feb  6 2009
-
+1.5 2009-02-06 CADE
   - %LlEe formats can take optional width (%10e for example)
 
-1.4   Wed Feb  4 2009
-
+1.4 2009-02-03 CADE
   - relicensed under same terms as Perl (i.e. incl. Artistic)
 
-1.3   Thu Nov 29 2007
-
+1.3 2007-11-29 CADE
   - examples use positive numbers (note by  Johan Lindstrom)
   - reset() may be used as attr()
 
-1.2   Fri Aug 26 2005
-
+1.2 2005-08-25 CADE
   - estimate_str() fixed
   - example in POD fixed
 
-0.01  Sun Oct 21 2001
-  
-  - original version; created by h2xs 1.21 with options
-  - -X Time::Progress
+1.0 2001-10-21 CADE
+  - Initial release to CPAN
 
