--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl module Time::Progress
 
-1.91 2015-08-23 CADE
+1.10 2015-08-23 CADE (changes from NEILB)
   - Removed redundant =cut at the end of the file, which was resulting
     in a pod warning.
   - Added a SEE ALSO section to the pod.
