--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module Time::Progress
 
+1.11 2015-10-?? CADE
+  - Added 'smoothing' option which makes the estimated time remaining
+    monotically decreasing most of the time, preventing flicker.
+
 1.10 2015-08-23 CADE (changes from NEILB)
   - Removed redundant =cut at the end of the file, which was resulting
     in a pod warning.
