--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module Time::Progress
 
+2.0 2015-09-01 CADE
+  - version bump (without comment on CPAN version number interpretation)
+
 1.10 2015-08-23 CADE (changes from NEILB)
   - Removed redundant =cut at the end of the file, which was resulting
     in a pod warning.
