--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module Time::Progress
 
+2.12 2017-03-27 NIGELM
+  - fixed div-by-zero when smoothing
+
 2.11 2015-12-08 CADE
   - fixed smoothing delta range and default parameter.
 
