--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module Time::Progress
 
+2.15 2025-03-18 CADE
+  - fixed problem with n/a mark when no info available
+
 2.14 2023-04-14 CADE
   - added %s for calculating total speed (items per second)
   - added %S for reporting min/max speed (after first 1%)
